<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layerlist_white_container_and_groupimage"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/textViewresultpage0"
        style="@style/textview_contextmenu"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/dummy"
        style="@style/textview_popup_resultpage" />

    <TextView
        android:id="@+id/textViewresultpage1"
        style="@style/textview_popup_resultpage"
        android:text="@string/naam_wijzigen" />

    <TextView
        android:id="@+id/textViewresultpage2"
        style="@style/textview_popup_resultpage"
        android:text="@string/verplaatsen_naar" />

    <TextView
        android:id="@+id/textViewresultpage3"
        style="@style/textview_popup_resultpage"
        android:text="@string/verwijderen" />

    <TextView
        android:id="@+id/textViewresultpage4"
        style="@style/textview_popup_resultpage"
        android:text="@string/annuleren" />

</LinearLayout>