<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/group_properties_grouplist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/group1"
        android:gravity="top|left"
        android:hint="@string/groepsledentoevoegen"
        android:inputType="textMultiLine"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:layout_weight="2"
        android:textColorHint="#999999" 
        >
        <requestFocus />
    </EditText>
   
    
    <LinearLayout
        android:id="@+id/framelayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" 
        android:orientation="vertical"
        >

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/splitstekst"
           
           />
        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/divider"
            android:listSelector="#00000000"
            android:cacheColorHint="#00000000"
            android:background="@drawable/group1"
             />

        <ViewStub
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout="@layout/empty" />
    </LinearLayout>
    
    
    
     <LinearLayout
        android:id = "@+id/buttonbarlayout"
        android:background="@drawable/result_page_dark_gradient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/button0"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_weight="1"
        android:text="@string/button_splits" />
    
    <Button
        android:id="@+id/button1"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_weight="1"
        android:text="@string/button_go" />
    
    </LinearLayout>
</LinearLayout>
