<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/edittextlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/result_page_dark_gradient" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:gravity="center_vertical"
            android:maxLines="1" >
        </EditText>

        <Button
            android:id="@+id/button1"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/divider"
            android:listSelector="#00000000" />

        <ViewStub
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout="@layout/empty" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttonbarlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/result_page_dark_gradient"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:padding="4dp"
         >

        <Button
            android:id="@+id/verdeel"
            style="@style/button"
            android:drawableLeft="@drawable/icon_play"
            android:text="@string/verdeel"
            android:layout_weight="4"
             />

        <Button
            android:id="@+id/group_properties_spinner1"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/btn_spinner"
            android:padding="0dp"
            android:prompt="@string/howmuch_subgroups"
            android:popupBackground="#ff223344"
			/>

        <Button
            android:id="@+id/properties"
            style="@style/button"
            android:layout_weight="4"
            android:drawableLeft="@drawable/icon_plus"
            android:drawablePadding="-20sp"
            android:text="@string/bewerken" 
            />

        </LinearLayout>

</LinearLayout>