<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layerlist_white_container_and_groupimage" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/textViewspinnerpopup0"
                android:layout_width="fill_parent" 
                android:layout_height="30dp"
                android:gravity="center|left"
                android:text="@string/aantalgroepen"
                android:textSize="25sp" 
                android:paddingBottom="0dp"/>

            <TextView
                android:id="@+id/textViewspinnerpopup0a"
                style="@style/textview_contextmenu"
                android:gravity="center|left"
				android:paddingTop="0dp"               
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewspinnerpopup1"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="2" />

                <TextView
                    android:id="@+id/textViewspinnerpopup2"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewspinnerpopup3"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="4" />

                <TextView
                    android:id="@+id/textViewspinnerpopup4"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewspinnerpopup5"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="6" />

                <TextView
                    android:id="@+id/textViewspinnerpopup6"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewspinnerpopup7"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="8" />

                <TextView
                    android:id="@+id/textViewspinnerpopup8"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewspinnerpopup9"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="10" />

                <TextView
                    android:id="@+id/textViewspinnerpopup10"
                    style="@style/textview_contextmenu_spinner"
                    android:layout_weight="1"
                    android:text="11" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewspinnerpopup11"
                style="@style/textview_contextmenu"
                android:layout_weight="1"
                android:text="@string/maak_tweetallen" />

            <TextView
                android:id="@+id/textViewspinnerpopup12"
                style="@style/textview_contextmenu"
                android:layout_weight="1"
                android:text="@string/maak_drietallen" />

            <TextView
                android:id="@+id/textViewspinnerpopup13"
                style="@style/textview_contextmenu"
                android:layout_weight="1"
                android:text="@string/maak_viertallen" />

            <TextView
                android:id="@+id/textViewspinnerpopup14"
                style="@style/textview_contextmenu"
                android:layout_weight="1"
                android:text="@string/andere_verdeling" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>